--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
       "test": "mocha"
     }
   , "dependencies": {
+        "bindings": "~1.1.0"
+      , "sherlock": "*"
     }
   , "devDependencies": {
         "chai": "*"
       , "mocha": "*"
     }
+  , "gypfile": true
 }
